<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:text="@string/label_product_name" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="center_horizontal"
        android:text="@string/label_extra_info" />

    <EditText
        android:id="@+id/extraInfoText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_extra_info" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnExtraAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:onClick="add"
            android:scaleType="center"
            android:text="@string/btn_add"
            android:textColor="@color/button_text"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:onClick="cancel"
            android:scaleType="center"
            android:text="@string/btn_cancel"
            android:textColor="@color/button_text"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>