<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" >
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp"
            android:text="@string/msg_delete_bill" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDeleteYES"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:onClick="yes"
            android:scaleType="center"
            android:text="@string/btn_yes"
            android:textColor="@color/button_text"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnDeleteNO"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:onClick="no"
            android:scaleType="center"
            android:text="@string/btn_no"
            android:textColor="@color/button_text"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>